Commit from VPS

--- a/frontend/angularSPA/src/app/app.component.html
+++ b/frontend/angularSPA/src/app/app.component.html
@@ -15,7 +15,7 @@
 
   <nb-layout-footer fixed>
     <!-- Insert footer here -->
-    Footer Content
+    Developed by Anonymous Systems
   </nb-layout-footer>
 
 </nb-layout>
