--- a/frontend/angularSPA/src/app/header/topbar/topbar.component.html
+++ b/frontend/angularSPA/src/app/header/topbar/topbar.component.html
@@ -7,6 +7,6 @@
 
 <nb-actions size="small" class="right">
     <nb-action class="control-item">
-        <nb-search type="rotate-layout"></nb-search>
+        <nb-search type="rotate-layout" tag="ip" placeholder="IP Address here..." hint="To Search for an IP Address - Hit enter to search"></nb-search>
     </nb-action>
 </nb-actions>
