--- a/frontend/angularSPA/src/app/pages/popcorntime/popcorntime.component.html
+++ b/frontend/angularSPA/src/app/pages/popcorntime/popcorntime.component.html
@@ -1,13 +1,32 @@
-<nb-card size="large">
+<div class="container-fluid content-row mx-auto">
+    <div class="row">
 
-    <nb-card-header>
-        <div class="text-center display-4">Movies Infinite List: {{ count }} movies</div>
-    </nb-card-header>
+        <div class="card mx-auto mb-3 bg-dark" id="card" style="" *ngFor="let movie of movies">
+                <a class="" target="_blank" href="https://www.imdb.com/title/{{ movie.imdb_id }}/" title="{{ movie.title }}">
+                    <img class="card-img-top rounded" id="mov_img" src="{{ movie.images | images }}" alt="{{ movie.title }}">
+                </a>
 
-    <nb-list nbInfiniteList [threshold]="500" (bottomThreshold)="loadNext()">
-        <nb-list-item *ngFor="let movie of movies" (click)="onSelect(movie)">
-            <h6 class="">{{ movie.title }}</h6>
-        </nb-list-item>
-    </nb-list>
+                <!--Magnet Download Button-->
+                <!--<a href="{% mag_link movie %}" id="" class="down-link bottom-right-overlay badge badge-primary">Download</a>-->
+                <!--<a href="{% mag_link movie %}" id="" class="down-icon-link bottom-right-overlay badge badge-primary"><i id="down-icon" class="down-icon material-icons">get_app</i></a>-->
 
-</nb-card>
+            </div>
+    </div>
+</div>
+
+<!--<nb-card size="large">-->
+
+    <!--<nb-card-header>-->
+        <!--<div class="text-center display-4">Movies Infinite List: {{ count }} movies</div>-->
+    <!--</nb-card-header>-->
+
+
+    <!--<nb-list nbInfiniteList [threshold]="500" (bottomThreshold)="loadNext()">-->
+
+        <!--<nb-list-item *ngFor="let movie of movies" (click)="onSelect(movie)">-->
+            <!--<h6 class="">{{ movie.images | images }}</h6>-->
+        <!--</nb-list-item>-->
+
+    <!--</nb-list>-->
+
+<!--</nb-card>-->
