Show movie image in Infinte List

--- a/frontend/angularSPA/src/app/pages/ip/ip.component.html
+++ b/frontend/angularSPA/src/app/pages/ip/ip.component.html
@@ -1,5 +1,5 @@
 <div class="tbl w-50 mx-auto pt-3">
-    <h1 class="jumbotron text-center">{{ ip }}</h1>
+    <h1 class="display-4 text-center">{{ ip }}</h1>
     <hr class="w-75" />
     <!--<iframe class="w-100" width="620" height="200" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/view?zoom=9&amp;center={{ info_location }}&amp;key=AIzaSyD7BOo5oZNKU0PrkVk5_x9LVTJtLb4JNeY"
         allowfullscreen=""></iframe> -->
