--- a/frontend/angularSPA2/src/app/admin/pages/dashboard/player/player.component.html
+++ b/frontend/angularSPA2/src/app/admin/pages/dashboard/player/player.component.html
@@ -10,7 +10,7 @@
 
           <nb-card class="col-5">
             <div class="row">
-              <div class="col d-flex">
+              <div class="col d-flex align-items-center">
                 <img  class="rounded cover" src="http://i1.sndcdn.com/artworks-000146382733-1c0jcj-t500x500.jpg" />
               </div>
               <div class="col d-flex flex-column justify-content-around">
