--- a/frontend/SPA/src/app/blog/blog.component.html
+++ b/frontend/SPA/src/app/blog/blog.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0">
+<div class="container-fluid p-0" id="main-wrapper">
   <nav class="container-fluid bg-dark text-center text-white p-2" aria-label="Navigation">
 
     <div class="container-fluid">
